--- a/draft-ietf-dprive-xfr-over-tls-05.html
+++ b/draft-ietf-dprive-xfr-over-tls-05.html
@@ -826,9 +826,7 @@ unsecure hint at the new RRset for this (QNAME,QCLASS,QTYPE).
 
 <p> </p>
 <h1 id="rfc.section.6.3.3"><a href="#rfc.section.6.3.3">6.3.3.</a> <a href="#xfr-limits" id="xfr-limits">XFR limits</a></h1>
-<p id="rfc.section.6.3.3.p.1">The server MAY limit the number of concurrent IXFRs, AXFRs or total XFR transfers in progress, or from a given secondary, to protect server resources.  </p>
-<p id="rfc.section.6.3.3.p.2">[OPEN QUESTION] Testing has shown that BIND returns SERVFAIL if the limit on concurrent transfers is reached since this is regarded as a soft limit and a retry can/should succeed. Should there be a specific recommendation here about what is returned re: SERVFAIL vs REFUSED? </p>
-<p id="rfc.section.6.3.3.p.3">[OPEN QUESTION] Is there a desire to define an additional XFR specific EDE code so that a client can determine why a specific XFR request was declined in this case e.g., Max concurrent XFR: too may concurrent transfers in progress. It could potentially contain a retry delay, or at least clients can apply a reasonable back-off for the retry. This could avoid retry storms which have been observed to actually increase the load on primaries in certain scenarios.  </p>
+<p id="rfc.section.6.3.3.p.1">The server MAY limit the number of concurrent IXFRs, AXFRs or total XFR transfers in progress, or from a given secondary, to protect server resources.  Servers SHOULD return SERVFAIL if this limit is hit, since it is a transient error and a retry at a later time might succeed.  </p>
 <h1 id="rfc.section.6.3.4"><a href="#rfc.section.6.3.4">6.3.4.</a> <a href="#the-ednstcpkeepalive-edns0-option" id="the-ednstcpkeepalive-edns0-option">The edns-tcp-keepalive EDNS0 Option</a></h1>
 <p id="rfc.section.6.3.4.p.1">XFR clients that send the edns-tcp-keepalive EDNS0 option on every XFR request provide the server with maximum opportunity to update the edns-tcp-keepalive timeout. The XFR server may use the frequency of recent XFRs to calculate an average update rate as input to the decision of what edns-tcp-keepalive timeout to use. If the server does not support edns-tcp-keepalive the client MAY keep the connection open for a few seconds (<a href="#RFC7766">[RFC7766]</a> recommends that servers use timeouts of at least a few seconds).  </p>
 <p id="rfc.section.6.3.4.p.2">Whilst the specification for EDNS0  <a href="#RFC6891">[RFC6891]</a>  does not specifically mention AXFRs, it does say </p>
@@ -976,8 +974,7 @@ support concurrent transfers of multiple zones)."
 <p> </p>
 <h1 id="rfc.section.7.7"><a href="#rfc.section.7.7">7.7.</a> <a href="#response-rcodes" id="response-rcodes">Response RCODES</a></h1>
 <p id="rfc.section.7.7.p.1">XoT clients and servers MUST implement EDE codes. If a XoT server receives non-XoT traffic it is not willing to answer on a TLS connection it SHOULD respond with the extended DNS error code 21 - Not Supported <a href="#RFC8914">[RFC8914]</a>. XoT clients should not send any further queries of this type to the server for a reasonable period of time (for example, one hour) i.e., long enough that the server configuration or policy might be updated.  </p>
-<p id="rfc.section.7.7.p.2">[OPEN QUESTION] Should this instead be Prohibited (by policy), or should a new EDE be created for this case? </p>
-<p id="rfc.section.7.7.p.3">Historically servers have used the REFUSED RCODE for many situations, and so clients often had no detailed information on which to base an error or fallback path when queries were refused. As a result the client behavior could vary significantly. XoT servers that refuse queries must cater for the fact that client behavior might vary from continually retrying queries regardless of receiving REFUSED to every query, or at the other extreme clients may decide to stop using the server over any transport. This might be because those clients are either non-XoT clients or do not implement EDE codes.  </p>
+<p id="rfc.section.7.7.p.2">Historically servers have used the REFUSED RCODE for many situations, and so clients often had no detailed information on which to base an error or fallback path when queries were refused. As a result the client behavior could vary significantly. XoT servers that refuse queries must cater for the fact that client behavior might vary from continually retrying queries regardless of receiving REFUSED to every query, or at the other extreme clients may decide to stop using the server over any transport. This might be because those clients are either non-XoT clients or do not implement EDE codes.  </p>
 <h1 id="rfc.section.7.8"><a href="#rfc.section.7.8">7.8.</a> <a href="#axot-specifics" id="axot-specifics">AXoT specifics</a></h1>
 <h1 id="rfc.section.7.8.1"><a href="#rfc.section.7.8.1">7.8.1.</a> <a href="#padding-axot-responses" id="padding-axot-responses">Padding AXoT responses</a></h1>
 <p id="rfc.section.7.8.1.p.1">The goal of padding AXoT responses would be two fold: </p>
@@ -1156,11 +1153,21 @@ described below)."
 <h1 id="rfc.section.12"><a href="#rfc.section.12">12.</a> <a href="#implementation-considerations" id="implementation-considerations">Implementation Considerations</a></h1>
 <p id="rfc.section.12.p.1">Server implementations may want to also offer options that allow ACLs on a zone to specify that a specific client can use either XoT or TCP. This would allow for flexibility while clients are migrating to XoT.  </p>
 <p id="rfc.section.12.p.2">Client implementations may similarly want to offer options to cater for the multi-primary case where the primaries are migrating to XoT.  </p>
-<p id="rfc.section.12.p.3">Such configuration options MUST only be used in a 'migration mode' though and therefore should be used with care.  </p>
+<p id="rfc.section.12.p.3">Such configuration options MUST only be used in a 'migration mode' though, and therefore should be used with care.  </p>
 <h1 id="rfc.section.13"><a href="#rfc.section.13">13.</a> <a href="#implementation-status" id="implementation-status">Implementation Status</a></h1>
-<p id="rfc.section.13.p.1">The 1.9.2 version of <a href="https://github.com/NLnetLabs/unbound/blob/release-1.9.2/doc/Changelog">Unbound</a> includes an option to perform AXoT (instead of AXFR-over-TCP). This requires the client (secondary) to authenticate the server (primary) using a configured authentication domain name.  </p>
-<p id="rfc.section.13.p.2">It is noted that use of a TLS proxy in front of the primary server is a simple deployment solution that can enable server side XoT.  </p>
+<p/>
+
+<ol>
+  <li>The 1.9.2 version of <a href="https://github.com/NLnetLabs/unbound/blob/release-1.9.2/doc/Changelog">Unbound</a> includes an option to perform AXoT (instead of AXFR-over-TCP).</li>
+  <li>There are currently open pull requests against NSD to implement <ol><li>Connection re-use by default during <a href="https://github.com/NLnetLabs/nsd/pull/145">XFR-over-TCP</a></li><li>Client side <a href="https://github.com/NLnetLabs/nsd/pull/149">XFR-over-TLS</a> <br/></li></ol></li>
+  <li>Version 9.17.7 of BIND contained an initial implementation of DoT, implementation of XoT is planned for early <a href="https://gitlab.isc.org/isc-projects/bind9/-/issues/1784">2021</a></li>
+</ol>
+
+<p> </p>
+<p id="rfc.section.13.p.2">Both items 1. and 2.2. listed above require the client (secondary) to authenticate the server (primary) using a configured authentication domain name if XoT is used.  </p>
+<p id="rfc.section.13.p.3">It is noted that use of a TLS proxy in front of the primary server is a simple deployment solution that can enable server side XoT.  </p>
 <h1 id="rfc.section.14"><a href="#rfc.section.14">14.</a> <a href="#iana-considerations" id="iana-considerations">IANA Considerations</a></h1>
+<p id="rfc.section.14.p.1">None.  </p>
 <h1 id="rfc.section.15"><a href="#rfc.section.15">15.</a> <a href="#security-considerations" id="security-considerations">Security Considerations</a></h1>
 <p id="rfc.section.15.p.1">This document specifies a security measure against a DNS risk: the risk that an attacker collects entire DNS zones through eavesdropping on clear text DNS zone transfers.  </p>
 <p id="rfc.section.15.p.2">This does not mitigate: </p>
@@ -1181,7 +1188,16 @@ described below)."
 <p id="rfc.section.17.p.2">Han Zhang <br/> Salesforce <br/> San Francisco, CA <br/> United States </p>
 <p id="rfc.section.17.p.3">Email: hzhang@salesforce.com </p>
 <h1 id="rfc.section.18"><a href="#rfc.section.18">18.</a> <a href="#changelog" id="changelog">Changelog</a></h1>
-<p id="rfc.section.18.p.1">draft-ietf-dprive-xfr-over-tls-04 </p>
+<p id="rfc.section.18.p.1">draft-ietf-dprive-xfr-over-tls-05 </p>
+<p/>
+
+<ul>
+  <li>Remove the open questions that received no comments.</li>
+  <li>Add more detail to the implementation section</li>
+</ul>
+
+<p> </p>
+<p id="rfc.section.18.p.3">draft-ietf-dprive-xfr-over-tls-04 </p>
 <p/>
 
 <ul>
@@ -1190,7 +1206,7 @@ described below)."
 </ul>
 
 <p> </p>
-<p id="rfc.section.18.p.3">draft-ietf-dprive-xfr-over-tls-03 </p>
+<p id="rfc.section.18.p.5">draft-ietf-dprive-xfr-over-tls-03 </p>
 <p/>
 
 <ul>
@@ -1205,7 +1221,7 @@ described below)."
 </ul>
 
 <p> </p>
-<p id="rfc.section.18.p.5">draft-ietf-dprive-xfr-over-tls-02 </p>
+<p id="rfc.section.18.p.7">draft-ietf-dprive-xfr-over-tls-02 </p>
 <p/>
 
 <ul>
@@ -1218,7 +1234,7 @@ described below)."
 </ul>
 
 <p> </p>
-<p id="rfc.section.18.p.7">draft-ietf-dprive-xfr-over-tls-01 </p>
+<p id="rfc.section.18.p.9">draft-ietf-dprive-xfr-over-tls-01 </p>
 <p/>
 
 <ul>
@@ -1227,7 +1243,7 @@ described below)."
 </ul>
 
 <p> </p>
-<p id="rfc.section.18.p.9">draft-ietf-dprive-xfr-over-tls-00 </p>
+<p id="rfc.section.18.p.11">draft-ietf-dprive-xfr-over-tls-00 </p>
 <p/>
 
 <ul>
@@ -1237,7 +1253,7 @@ described below)."
 </ul>
 
 <p> </p>
-<p id="rfc.section.18.p.11">draft-hzpa-dprive-xfr-over-tls-02 </p>
+<p id="rfc.section.18.p.13">draft-hzpa-dprive-xfr-over-tls-02 </p>
 <p/>
 
 <ul>
@@ -1245,7 +1261,7 @@ described below)."
 </ul>
 
 <p> </p>
-<p id="rfc.section.18.p.13">draft-hzpa-dprive-xfr-over-tls-01 </p>
+<p id="rfc.section.18.p.15">draft-hzpa-dprive-xfr-over-tls-01 </p>
 <p/>
 
 <ul>
@@ -1253,7 +1269,7 @@ described below)."
 </ul>
 
 <p> </p>
-<p id="rfc.section.18.p.15">draft-hzpa-dprive-xfr-over-tls-00 </p>
+<p id="rfc.section.18.p.17">draft-hzpa-dprive-xfr-over-tls-00 </p>
 <p/>
 
 <ul>
