--- a/draft-ietf-dprive-xfr-over-tls-06.html
+++ b/draft-ietf-dprive-xfr-over-tls-06.html
@@ -655,7 +655,7 @@ gets the data) are discussed in [RFC5936] and [RFC5155]."
 <p id="rfc.section.5.p.1">The original specification for zone transfers in <a href="#RFC1034">[RFC1034]</a> and <a href="#RFC1035">[RFC1035]</a> was based on a polling mechanism: a secondary performed a periodic SOA query (based on the refresh timer) to determine if an AXFR was required.  </p>
 <p><a href="#RFC1995">[RFC1995]</a> and <a href="#RFC1996">[RFC1996]</a> introduced the concepts of IXFR and NOTIFY respectively, to provide for prompt propagation of zone updates. This has largely replaced AXFR where possible, particularly for dynamically updated zones.  </p>
 <p><a href="#RFC5936">[RFC5936]</a> subsequently redefined the specification of AXFR to improve performance and interoperability.  </p>
-<p id="rfc.section.5.p.4">In this document we use the phrase "XFR mechanism" to describe the entire set of message exchanges between a secondary and a primary that concludes in a successful AXFR or IXFR request/response. This set may or may not include </p>
+<p id="rfc.section.5.p.4">In this document we use the term "XFR mechanism" to describe the entire set of message exchanges between a secondary and a primary that concludes in a successful AXFR or IXFR request/response. This set may or may not include </p>
 <p/>
 
 <ul>
@@ -777,8 +777,8 @@ unsecure hint at the new RRset for this (QNAME,QCLASS,QTYPE).
 <h1 id="rfc.section.5.3.2"><a href="#rfc.section.5.3.2">5.3.2.</a> <a href="#soa" id="soa">SOA</a></h1>
 <p id="rfc.section.5.3.2.p.1">For hidden primaries or secondaries the SOA response leaks only the degree of lag of any downstream secondary.  </p>
 <h1 id="rfc.section.6"><a href="#rfc.section.6">6.</a> <a href="#updates-to-existing-specifications" id="updates-to-existing-specifications">Updates to existing specifications</a></h1>
-<p id="rfc.section.6.p.1">For convenience, the phrase 'XFR-over-TCP' is used in this document to mean both IXFR-over-TCP and AXFR-over-TCP and therefore statements that use it update both <a href="#RFC1995">[RFC1995]</a> and <a href="#RFC5936">[RFC5936]</a>, and implicitly also apply to XoT.  Differences in behavior specific to XoT are discussed in <a href="#xot-specification">Section 7</a>.  </p>
-<p id="rfc.section.6.p.2">Both <a href="#RFC1995">[RFC1995]</a> and <a href="#RFC5936">[RFC5936]</a> were published sometime before TCP was considered a first class transport for DNS. <a href="#RFC1995">[RFC1995]</a>, in fact, says nothing with respect to optimizing IXFRs over TCP or re-using already open TCP connections to perform IXFRs or other queries. Therefore, there arguably is an implicit assumption (probably unintentional) that a TCP connection is used for one and only one IXFR request. Indeed, several open source implementations currently take this approach. And whilst <a href="#RFC5936">[RFC5936]</a> gives guidance on connection re-use for AXFR, it pre-dates more recent specifications describing persistent TCP connections e.g. <a href="#RFC7766">[RFC7766]</a>, <a href="#RFC7828">[RFC7828]</a> and AXFR implementations again often make less than optimal use of open connections.  </p>
+<p id="rfc.section.6.p.1">For convenience, the term 'XFR-over-TCP' is used in this document to mean both IXFR-over-TCP and AXFR-over-TCP and therefore statements that use that term update both <a href="#RFC1995">[RFC1995]</a> and <a href="#RFC5936">[RFC5936]</a>, and implicitly also apply to XoT.  Differences in behavior specific to XoT are discussed in <a href="#xot-specification">Section 7</a>.  </p>
+<p id="rfc.section.6.p.2">Both <a href="#RFC1995">[RFC1995]</a> and <a href="#RFC5936">[RFC5936]</a> were published sometime before TCP was considered a first class transport for DNS. <a href="#RFC1995">[RFC1995]</a>, in fact, says nothing with respect to optimizing IXFRs over TCP or re-using already open TCP connections to perform IXFRs or other queries. Therefore, there arguably is an implicit assumption (probably unintentional) that a TCP connection is used for one and only one IXFR request. Indeed, many major open source implementations currently take this approach. And whilst <a href="#RFC5936">[RFC5936]</a> gives guidance on connection re-use for AXFR, it pre-dates more recent specifications describing persistent TCP connections e.g. <a href="#RFC7766">[RFC7766]</a>, <a href="#RFC7828">[RFC7828]</a> and AXFR implementations again often make less than optimal use of open connections.  </p>
 <p id="rfc.section.6.p.3">Given this, new implementations of XoT will clearly benefit from specific guidance on TCP/TLS connection usage for XFR because this will: </p>
 <p/>
 
@@ -788,13 +788,22 @@ unsecure hint at the new RRset for this (QNAME,QCLASS,QTYPE).
 </ul>
 
 <p> </p>
-<p id="rfc.section.6.p.5">Therefore this document updates both the previous specifications for XFR-over-TCP to clarify that implementations MUST use <a href="#RFC7766">[RFC7766]</a> (DNS Transport over TCP - Implementation Requirements) to optimize the use of TCP connections and SHOULD use <a href="#RFC7828">[RFC7828]</a> (The edns-tcp-keepalive EDNS0 Option) to manage persistent connections.  </p>
-<p id="rfc.section.6.p.6">The following sections include detailed clarifications on the updates to XFR behavior implied in <a href="#RFC7766">[RFC7766]</a> and how the use of <a href="#RFC7828">[RFC7828]</a> applies specifically to XFR exchanges. It also discusses how IXFR and AXFR can reuse the same TCP connection.  </p>
-<p id="rfc.section.6.p.7">For completeness, we also mention here the recent specification of extended DNS error (EDE) codes <a href="#RFC8914">[RFC8914]</a>. For zone transfers, when returning REFUSED to a zone transfer request to an 'unauthorized' client (e.g. where the client is not listed in an ACL for zone transfers or does not sign the request with the correct TSIG key), the extended DNS error code 18 (Prohibited) can also be sent.  </p>
+<p id="rfc.section.6.p.5">Therefore this document updates both the previous specifications for XFR-over-TCP to clarify that </p>
+<p/>
+
+<ul>
+  <li>Implementations MUST use <a href="#RFC7766">[RFC7766]</a> (DNS Transport over TCP - Implementation Requirements) to optimize the use of TCP connections.</li>
+  <li>Whilst RFC7766 states that 'DNS clients SHOULD pipeline their queries&#8217; on TCP connections, it did not distinguish between XFRs and other queries for this behavior. It is now recognized that XFRs are not as latency sensitive as other queries, and can be significantly more complex for clients to handle both because of the large amount of state that must be kept and because there may be multiple messages in the responses. For these reasons it is clarified here that a valid reason for not pipelining queries is when they are all XFR queries i.e. clients sending multiple XFRs MAY choose not to pipeline those queries. Clients that do not pipeline XFR queries, therefore, have no additional requirements to handle out-of-order or intermingled responses (as described later) since they will never receive them.</li>
+  <li>Implementations SHOULD use <a href="#RFC7828">[RFC7828]</a> (The edns-tcp-keepalive EDNS0 Option) to manage persistent connections.</li>
+</ul>
+
+<p> </p>
+<p id="rfc.section.6.p.7">The following sections include detailed clarifications on the updates to XFR behavior implied in <a href="#RFC7766">[RFC7766]</a> and how the use of <a href="#RFC7828">[RFC7828]</a> applies specifically to XFR exchanges. It also discusses how IXFR and AXFR can reuse the same TCP connection.  </p>
+<p id="rfc.section.6.p.8">For completeness, we also mention here the recent specification of extended DNS error (EDE) codes <a href="#RFC8914">[RFC8914]</a>. For zone transfers, when returning REFUSED to a zone transfer request to an 'unauthorized' client (e.g. where the client is not listed in an ACL for zone transfers or does not sign the request with the correct TSIG key), the extended DNS error code 18 (Prohibited) can also be sent.  </p>
 <h1 id="rfc.section.6.1"><a href="#rfc.section.6.1">6.1.</a> <a href="#update-to-rfc1995-for-ixfrovertcp" id="update-to-rfc1995-for-ixfrovertcp">Update to RFC1995 for IXFR-over-TCP</a></h1>
 <p id="rfc.section.6.1.p.1">For clarity - an IXFR-over-TCP server compliant with this specification MUST be able to handle multiple concurrent IXoT requests on a single TCP connection (for the same and different zones) and SHOULD send the responses as soon as they are available, which might be out-of-order compared to the requests.  </p>
 <h1 id="rfc.section.6.2"><a href="#rfc.section.6.2">6.2.</a> <a href="#update-to-rfc5936-for-axfrovertcp" id="update-to-rfc5936-for-axfrovertcp">Update to RFC5936 for AXFR-over-TCP</a></h1>
-<p id="rfc.section.6.2.p.1">For clarity - an AXFR-over-TCP server compliant with this specification MUST be able to handle multiple concurrent AXoT sessions on a single TCP connection (for the same and different zones). The response streams for concurrent AXFRs MAY be intermingled and AXFR-over-TCP clients compliant with this specification MUST be able to handle this.  </p>
+<p id="rfc.section.6.2.p.1">For clarity - an AXFR-over-TCP server compliant with this specification MUST be able to handle multiple concurrent AXoT sessions on a single TCP connection (for the same and different zones). The response streams for concurrent AXFRs MAY be intermingled and AXFR-over-TCP clients compliant with this specification which pipeline AXFR requests MUST be able to handle this.  </p>
 <h1 id="rfc.section.6.3"><a href="#rfc.section.6.3">6.3.</a> <a href="#updates-to-rfc1995-and-rfc5936-for-xfrovertcp" id="updates-to-rfc1995-and-rfc5936-for-xfrovertcp">Updates to RFC1995 and RFC5936 for XFR-over-TCP</a></h1>
 <h1 id="rfc.section.6.3.1"><a href="#rfc.section.6.3.1">6.3.1.</a> <a href="#connection-reuse" id="connection-reuse">Connection reuse</a></h1>
 <p id="rfc.section.6.3.1.p.1">As specified, XFR-over-TCP clients SHOULD re-use any existing open TCP connection when starting any new XFR request to the same primary, and for issuing SOA queries, instead of opening a new connection. The number of TCP connections between a secondary and primary SHOULD be minimized (also see <a href="#update-to-rfc7766">Section 6.4</a>).  </p>
@@ -802,6 +811,7 @@ unsecure hint at the new RRset for this (QNAME,QCLASS,QTYPE).
 <p/>
 
 <ul>
+  <li>as already noted in <a href="#RFC7766">[RFC7766]</a>, separate connections for different zones might be preferred for operational reasons. In this case the number of concurrent connections for zone transfers SHOULD be limited to the total number of zones transferred between the client and server.</li>
   <li>reaching a configured limit for the number of outstanding queries or XFR requests allowed on a single TCP connection</li>
   <li>the message ID pool has already been exhausted on an open connection</li>
   <li>a large number of timeouts or slow responses have occurred on an open connection</li>
@@ -820,7 +830,7 @@ unsecure hint at the new RRset for this (QNAME,QCLASS,QTYPE).
 
 <ul>
   <li>use the same TCP connection for both AXFR and IXFR requests to the same primary</li>
-  <li>pipeline such request and MAY intermingle them</li>
+  <li>pipeline such requests (if they pipeline XFR requests in general) and MAY intermingle them</li>
   <li>send the response(s) for each request as soon as they are available i.e. responses MAY be sent intermingled</li>
 </ul>
 
@@ -869,7 +879,7 @@ support concurrent transfers of multiple zones)."
 </ul>
 
 <p> </p>
-<p id="rfc.section.6.4.p.7">We provide specific details in the later sections of reasons where more than one connection for a given transport might be required for zone transfers from a particular client.  </p>
+<p><a href="#connection-reuse">Section 6.3.1</a> has provided specific details of reasons where more than one connection for a given transport might be required for zone transfers from a particular client.  </p>
 <h1 id="rfc.section.7"><a href="#rfc.section.7">7.</a> <a href="#xot-specification" id="xot-specification">XoT specification</a></h1>
 <h1 id="rfc.section.7.1"><a href="#rfc.section.7.1">7.1.</a> <a href="#tls-versions" id="tls-versions">TLS versions</a></h1>
 <p id="rfc.section.7.1.p.1">For improved security all implementations of this specification MUST use only TLS 1.3 <a href="#RFC8446">[RFC8446]</a> or later.  </p>
@@ -1182,13 +1192,23 @@ described below)."
 <p> </p>
 <p id="rfc.section.15.p.4">Security concerns of DoT are outlined in <a href="#RFC7858">[RFC7858]</a> and <a href="#RFC8310">[RFC8310]</a>.  </p>
 <h1 id="rfc.section.16"><a href="#rfc.section.16">16.</a> <a href="#acknowledgements" id="acknowledgements">Acknowledgements</a></h1>
-<p id="rfc.section.16.p.1">The authors thank Tony Finch, Peter van Dijk, Benno Overeinder, Shumon Huque and Tim Wicinski for review and discussions.  </p>
+<p id="rfc.section.16.p.1">The authors thank Tony Finch, Benno Overeinder, Shumon Huque and Tim Wicinski and many other members of DPRIVE for review and discussions.  </p>
+<p id="rfc.section.16.p.2">The authors particularly thank Peter van Dikj, Ondrey Sury, Peter Dickson and several other open source DNS implementors for valuable discussion and clarification on the issue associated with pipelining XFR queries and handling out-of-order/intermingled responses.  </p>
 <h1 id="rfc.section.17"><a href="#rfc.section.17">17.</a> <a href="#contributors" id="contributors">Contributors</a></h1>
 <p id="rfc.section.17.p.1">Significant contributions to the document were made by: </p>
 <p id="rfc.section.17.p.2">Han Zhang <br/> Salesforce <br/> San Francisco, CA <br/> United States </p>
 <p id="rfc.section.17.p.3">Email: hzhang@salesforce.com </p>
 <h1 id="rfc.section.18"><a href="#rfc.section.18">18.</a> <a href="#changelog" id="changelog">Changelog</a></h1>
-<p id="rfc.section.18.p.1">draft-ietf-dprive-xfr-over-tls-05 </p>
+<p id="rfc.section.18.p.1">draft-ietf-dprive-xfr-over-tls-06 </p>
+<p/>
+
+<ul>
+  <li>Update text relating to pipelining and connection reuse after WGLC comments.</li>
+  <li>Various typos.</li>
+</ul>
+
+<p> </p>
+<p id="rfc.section.18.p.3">draft-ietf-dprive-xfr-over-tls-05 </p>
 <p/>
 
 <ul>
@@ -1197,7 +1217,7 @@ described below)."
 </ul>
 
 <p> </p>
-<p id="rfc.section.18.p.3">draft-ietf-dprive-xfr-over-tls-04 </p>
+<p id="rfc.section.18.p.5">draft-ietf-dprive-xfr-over-tls-04 </p>
 <p/>
 
 <ul>
@@ -1206,7 +1226,7 @@ described below)."
 </ul>
 
 <p> </p>
-<p id="rfc.section.18.p.5">draft-ietf-dprive-xfr-over-tls-03 </p>
+<p id="rfc.section.18.p.7">draft-ietf-dprive-xfr-over-tls-03 </p>
 <p/>
 
 <ul>
@@ -1221,7 +1241,7 @@ described below)."
 </ul>
 
 <p> </p>
-<p id="rfc.section.18.p.7">draft-ietf-dprive-xfr-over-tls-02 </p>
+<p id="rfc.section.18.p.9">draft-ietf-dprive-xfr-over-tls-02 </p>
 <p/>
 
 <ul>
@@ -1234,7 +1254,7 @@ described below)."
 </ul>
 
 <p> </p>
-<p id="rfc.section.18.p.9">draft-ietf-dprive-xfr-over-tls-01 </p>
+<p id="rfc.section.18.p.11">draft-ietf-dprive-xfr-over-tls-01 </p>
 <p/>
 
 <ul>
@@ -1243,7 +1263,7 @@ described below)."
 </ul>
 
 <p> </p>
-<p id="rfc.section.18.p.11">draft-ietf-dprive-xfr-over-tls-00 </p>
+<p id="rfc.section.18.p.13">draft-ietf-dprive-xfr-over-tls-00 </p>
 <p/>
 
 <ul>
@@ -1253,7 +1273,7 @@ described below)."
 </ul>
 
 <p> </p>
-<p id="rfc.section.18.p.13">draft-hzpa-dprive-xfr-over-tls-02 </p>
+<p id="rfc.section.18.p.15">draft-hzpa-dprive-xfr-over-tls-02 </p>
 <p/>
 
 <ul>
@@ -1261,7 +1281,7 @@ described below)."
 </ul>
 
 <p> </p>
-<p id="rfc.section.18.p.15">draft-hzpa-dprive-xfr-over-tls-01 </p>
+<p id="rfc.section.18.p.17">draft-hzpa-dprive-xfr-over-tls-01 </p>
 <p/>
 
 <ul>
@@ -1269,7 +1289,7 @@ described below)."
 </ul>
 
 <p> </p>
-<p id="rfc.section.18.p.17">draft-hzpa-dprive-xfr-over-tls-00 </p>
+<p id="rfc.section.18.p.19">draft-hzpa-dprive-xfr-over-tls-00 </p>
 <p/>
 
 <ul>
