--- a/draft-ietf-dprive-xfr-over-tls-06.html
+++ b/draft-ietf-dprive-xfr-over-tls-06.html
@@ -446,7 +446,7 @@
 
   <meta name="dct.creator" content="Toorop, W., Dickinson, S., Sahib, S., Aras, P., and A. Mankin" />
   <meta name="dct.identifier" content="urn:ietf:id:draft-ietf-dprive-xfr-over-tls-06" />
-  <meta name="dct.issued" scheme="ISO8601" content="2021-2-8" />
+  <meta name="dct.issued" scheme="ISO8601" content="2021-2-11" />
   <meta name="dct.abstract" content="DNS zone transfers are transmitted in clear text, which gives attackers the opportunity to collect the content of a zone by eavesdropping on network connections. The DNS Transaction Signature (TSIG) mechanism is specified to restrict direct zone transfer to authorized clients only, but it does not add confidentiality. This document specifies the use of TLS, rather than clear text, to prevent zone content collection via passive monitoring of zone transfers: XFR-over-TLS (XoT). Additionally, this specification updates RFC1995, RFC5936 and RFC7766.  " />
   <meta name="description" content="DNS zone transfers are transmitted in clear text, which gives attackers the opportunity to collect the content of a zone by eavesdropping on network connections. The DNS Transaction Signature (TSIG) mechanism is specified to restrict direct zone transfer to authorized clients only, but it does not add confidentiality. This document specifies the use of TLS, rather than clear text, to prevent zone content collection via passive monitoring of zone transfers: XFR-over-TLS (XoT). Additionally, this specification updates RFC1995, RFC5936 and RFC7766.  " />
 
@@ -474,7 +474,7 @@
   <td class="right">Sinodun IT</td>
 </tr>
 <tr>
-  <td class="left">Expires: August 12, 2021</td>
+  <td class="left">Expires: August 15, 2021</td>
   <td class="right">S. Sahib</td>
 </tr>
 <tr>
@@ -491,7 +491,7 @@
 </tr>
 <tr>
   <td class="left"></td>
-  <td class="right">February 8, 2021</td>
+  <td class="right">February 11, 2021</td>
 </tr>
 
     	
@@ -511,7 +511,7 @@
 <p>This Internet-Draft is submitted in full conformance with the provisions of BCP 78 and BCP 79.</p>
 <p>Internet-Drafts are working documents of the Internet Engineering Task Force (IETF).  Note that other groups may also distribute working documents as Internet-Drafts.  The list of current Internet-Drafts is at http://datatracker.ietf.org/drafts/current/.</p>
 <p>Internet-Drafts are draft documents valid for a maximum of six months and may be updated, replaced, or obsoleted by other documents at any time.  It is inappropriate to use Internet-Drafts as reference material or to cite them other than as "work in progress."</p>
-<p>This Internet-Draft will expire on August 12, 2021.</p>
+<p>This Internet-Draft will expire on August 15, 2021.</p>
 <h1 id="rfc.copyrightnotice">
   <a href="#rfc.copyrightnotice">Copyright Notice</a>
 </h1>
@@ -1165,6 +1165,8 @@ described below)."
 <p id="rfc.section.12.p.2">Client implementations may similarly want to offer options to cater for the multi-primary case where the primaries are migrating to XoT.  </p>
 <p id="rfc.section.12.p.3">Such configuration options MUST only be used in a 'migration mode' though, and therefore should be used with care.  </p>
 <h1 id="rfc.section.13"><a href="#rfc.section.13">13.</a> <a href="#implementation-status" id="implementation-status">Implementation Status</a></h1>
+<p id="rfc.section.13.p.1">A summary of current behavior and implementation status can be found here: <a href="https://dnsprivacy.org/wiki/display/DP/DNS+Privacy+Implementation+Status#DNSPrivacyImplementationStatus-XFR/XoTImplementationstatus">XoT implementation status</a> </p>
+<p id="rfc.section.13.p.2">Specific recent activity includes: </p>
 <p/>
 
 <ol>
@@ -1174,8 +1176,8 @@ described below)."
 </ol>
 
 <p> </p>
-<p id="rfc.section.13.p.2">Both items 1. and 2.2. listed above require the client (secondary) to authenticate the server (primary) using a configured authentication domain name if XoT is used.  </p>
-<p id="rfc.section.13.p.3">It is noted that use of a TLS proxy in front of the primary server is a simple deployment solution that can enable server side XoT.  </p>
+<p id="rfc.section.13.p.4">Both items 1. and 2.2. listed above require the client (secondary) to authenticate the server (primary) using a configured authentication domain name if XoT is used.  </p>
+<p id="rfc.section.13.p.5">It is noted that use of a TLS proxy in front of the primary server is a simple deployment solution that can enable server side XoT.  </p>
 <h1 id="rfc.section.14"><a href="#rfc.section.14">14.</a> <a href="#iana-considerations" id="iana-considerations">IANA Considerations</a></h1>
 <p id="rfc.section.14.p.1">None.  </p>
 <h1 id="rfc.section.15"><a href="#rfc.section.15">15.</a> <a href="#security-considerations" id="security-considerations">Security Considerations</a></h1>
@@ -1204,7 +1206,8 @@ described below)."
 
 <ul>
   <li>Update text relating to pipelining and connection reuse after WGLC comments.</li>
-  <li>Various typos.</li>
+  <li>Add link to implementation status matrix</li>
+  <li>Various typos</li>
 </ul>
 
 <p> </p>
